[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -6.0
color = Color( 0.301961, 0.301961, 0.301961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextGenButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.97
anchor_right = 1.0
anchor_bottom = 0.97
margin_left = -182.0
margin_top = -31.0
custom_fonts/font = SubResource( 1 )
text = "Next Generation"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopulateRandom" type="Button" parent="."]
anchor_top = 0.97
anchor_bottom = 0.97
margin_top = -31.0
margin_right = 129.0
custom_fonts/font = SubResource( 1 )
text = "Randomize"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenerationCounter" type="Label" parent="."]
anchor_left = 0.499592
anchor_top = 0.97
anchor_right = 0.499592
anchor_bottom = 0.97
margin_left = -7.0
margin_top = -25.0
margin_right = 7.0
rect_rotation = 0.387913
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="CurrentGeneration" type="Label" parent="GenerationCounter"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -145.903
margin_top = -25.0542
margin_right = -18.9031
margin_bottom = -0.054245
custom_fonts/font = SubResource( 1 )
text = "Generation: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearButton" type="Button" parent="."]
anchor_left = 0.2
anchor_top = 0.97
anchor_right = 0.2
anchor_bottom = 0.97
margin_top = -31.0
margin_right = 66.0
custom_fonts/font = SubResource( 1 )
text = "Clear"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.7
anchor_top = 0.96
anchor_right = 0.7
anchor_bottom = 0.96
margin_left = -59.0
margin_top = -25.0
custom_fonts/font = SubResource( 1 )
text = "Zoom"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="Label"]
margin_left = -4.09705
margin_top = 22.5801
margin_right = 60.903
margin_bottom = 38.5801
min_value = 0.5
max_value = 5.0
step = 0.1
value = 3.5
tick_count = 100
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="NextGenButton" to="." method="_on_NextGenButton_pressed"]
[connection signal="pressed" from="PopulateRandom" to="." method="_on_PopulateRandom_pressed"]
[connection signal="pressed" from="ClearButton" to="." method="_on_ClearButton_pressed"]
[connection signal="value_changed" from="Label/HSlider" to="." method="_on_HSlider_value_changed"]
